# Sentinel

./: .env.example  README.md  Sentinel_Audit_Report_2026-07-11.md  Sentinel_Build_Map.md  Sentinel_Debug_Report.md  Sentinel_Master_Reference.md  Sentinel_Progress_Deployment_Report.md  Sentinel_Team_Briefing_2026-07-11.md  build.sh  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_case.py  run_eval.py  test_silence.py
Sentinel-main/: .gitignore  Dockerfile  SUBMISSION.md  Sentinel_Completion_Report.md  Sentinel_Testing_Verification_Guide.md  Sentinel_Winning_Edition_Bible.md  run_eval.py  run_self_play.py  suggestions.md  test_debug_report_findings.py
demo_artifacts/: injection_invoice.txt
sentinel/: __init__.py  claims.py  demo_fixtures.py  federated.py  file_forensics.py  gateway.py  ingest.py  injection_scanner.py  make_fixtures.py  mcp_baseline.py  mcp_server.py  pii_gateway.py  pipeline.py  recall.py  reconciler.py  slack_app.py  slack_ui.py  sse_worker.py  worker.py
sentinel-frontend/: .env.example  README.md  metadata.json  package-lock.json  package.json  vite.config.ts
sentinel.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_analytics.py  test_blast_radius.py  test_campaign.py  test_claim_harvest.py  test_core_supporting.py  test_eval.py  test_file_forensics.py  test_finance_agent.py  test_graph_cache.py  test_injection_scanner.py  test_mcp.py  test_mcp_baseline.py  test_nlp_agent.py  test_pii_gateway.py  test_policy_agent.py  test_quarantine.py  test_recall.py  test_reconciler.py  test_rules.py  (+4 more)
(+70 files in other folders)
