[project]
name = "sentinel"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires docker compose up -d (real Postgres)",
]
# Skip integration tests unless explicitly requested:  pytest --integration
addopts = "-m 'not integration'"
